prevent scrolling and jump to top when show success

--- a/app/javascript/src/application.css
+++ b/app/javascript/src/application.css
@@ -2,3 +2,7 @@
 @import 'layout.css';
 @import 'header.css';
 @import 'success.css';
+
+body.modal-open {
+    overflow: hidden;
+}
